tests/ui/issues/issue-52489.stderr
error[E0658]: use of unstable library feature `issue_52489_unstable`
  --> $DIR/issue-52489.rs:5:5
   |
LL | use issue_52489;
   |     ^^^^^^^^^^^
   |
   = help: add `#![feature(issue_52489_unstable)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0658`.
